k8s-manifests/apiGateway-deploy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: microservice-application
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: microservice-application
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: jubair2002/microservice-app:api-gateway
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 200m # 0.2 of a CPU
            memory: 25Mi # 256 Mebibytes
          limits:
            cpu: 500m # 0.5 of a CPU
            memory: 51Mi # 512 Mebibytes
