k8s-manifests/auth-deploy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservice-application
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: microservice-application
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-container
        image: jubair2002/microservice-app:auth
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: 200m # 0.2 of a CPU
            memory: 25Mi # 256 Mebibytes
          limits:
            cpu: 500m # 0.5 of a CPU
            memory: 51Mi # 512 Mebibytes
