k8s-manifests/frontend-deploy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservice-application
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: microservice-application
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: jubair2002/microservice-app:frontend
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m # 0.2 of a CPU
            memory: 25Mi # 256 Mebibytes
          limits:
            cpu: 500m # 0.5 of a CPU
            memory: 51Mi # 512 Mebibytes
