k8s-manifests/payment-deploy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservice-application
spec:
  selector:
    app: payment
  ports:
  - protocol: TCP
    port: 5004
    targetPort: 5004
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: microservice-application
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment-container
        image: jubair2002/microservice-app:payment
        ports:
        - containerPort: 5004
        resources:
          requests:
            cpu: 200m # 0.2 of a CPU
            memory: 25Mi # 256 Mebibytes
          limits:
            cpu: 500m # 0.5 of a CPU
            memory: 51Mi # 512 Mebibytes
